--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,11 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
+        "intervention/image": "^2.4",
         "laravel/framework": "^7.24",
-        "laravel/tinker": "^2.0"
+        "laravel/helpers": "^1.3",
+        "laravel/tinker": "^2.0",
+        "laravelcollective/html": "^6.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
